--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.o
 *.so
 moc_*
+Denoising.pro.user
+Makefile
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -36,3 +38,7 @@ moc_*
 Icon?
 ehthumbs.db
 Thumbs.db
+
+# folders #
+fftw3/*
+release/*
